docs/envoy/v1.7.1/_sources/api-v2/config/filter/network/mongo_proxy/v2/mongo_proxy.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/network/mongo_proxy/v2/mongo_proxy.proto:

Mongo proxy
===========

MongoDB :ref:`configuration overview <config_network_filters_mongo_proxy>`.

.. _envoy_api_msg_config.filter.network.mongo_proxy.v2.MongoProxy:

config.filter.network.mongo_proxy.v2.MongoProxy
-----------------------------------------------

`[config.filter.network.mongo_proxy.v2.MongoProxy proto] <https://github.com/envoyproxy/envoy/blob/master/api/envoy/config/filter/network/mongo_proxy/v2/mongo_proxy.proto#L12>`_


.. code-block:: json

  {
    "stat_prefix": "...",
    "access_log": "...",
    "delay": "{...}"
  }

.. _envoy_api_field_config.filter.network.mongo_proxy.v2.MongoProxy.stat_prefix:

stat_prefix
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_, *REQUIRED*) The human readable prefix to use when emitting :ref:`statistics
  <config_network_filters_mongo_proxy_stats>`.
  
  
.. _envoy_api_field_config.filter.network.mongo_proxy.v2.MongoProxy.access_log:

access_log
  (`string <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) The optional path to use for writing Mongo access logs. If not access log
  path is specified no access logs will be written. Note that access log is
  also gated :ref:`runtime <config_network_filters_mongo_proxy_runtime>`.
  
  
.. _envoy_api_field_config.filter.network.mongo_proxy.v2.MongoProxy.delay:

delay
  (:ref:`config.filter.fault.v2.FaultDelay <envoy_api_msg_config.filter.fault.v2.FaultDelay>`) Inject a fixed delay before proxying a Mongo operation. Delays are
  applied to the following MongoDB operations: Query, Insert, GetMore,
  and KillCursors. Once an active delay is in progress, all incoming
  data up until the timer event fires will be a part of the delay.
  
  

